--- a/charts/thoras/templates/dashboard/deployment.yaml
+++ b/charts/thoras/templates/dashboard/deployment.yaml
@@ -49,9 +49,13 @@ spec:
         imagePullPolicy: "{{ .Values.imagePullPolicy }}"
         ports:
         - containerPort: {{ .Values.thorasDashboard.containerPort }}
+        {{- if .Values.thorasDashboard.resources }}
+        resources: {{ .Values.thorasDashboard.resources | toYaml | nindent 10 }}
+        {{- else }}
         resources:
-          limits: {{ .Values.thorasOperator.limits | toYaml | nindent 12 }}
-          requests: {{ .Values.thorasOperator.requests | toYaml | nindent 12 }}
+          limits: {{ .Values.thorasDashboard.limits | toYaml | nindent 12 }}
+          requests: {{ .Values.thorasDashboard.requests | toYaml | nindent 12 }}
+        {{- end }}
         volumeMounts:
           - name: nginx-config
             mountPath: /etc/nginx/nginx.conf
@@ -65,9 +69,7 @@ spec:
           - name: nginx-config
             mountPath: /etc/nginx/nginx.conf
             subPath: nginx.conf
-        resources:
-          limits: {{ .Values.thorasDashboard.limits | toYaml | nindent 12 }}
-          requests: {{ .Values.thorasDashboard.requests | toYaml | nindent 12 }}
+        resources: {{ .Values.thorasDashboard.nginx.resources | toYaml | nindent 10 }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
