--- a/charts/thoras/tests/collector_deployment_test.yaml
+++ b/charts/thoras/tests/collector_deployment_test.yaml
@@ -202,3 +202,31 @@ tests:
               memory: "1Gi"
               cpu: "1"
               hugepages-1Gi: "2Gi"
+  - it: Can override resources block
+    template: collector/deployment.yaml
+    set:
+      metricsCollector:
+        timescale:
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "500m"
+              hugepages-1Gi: "2Gi"
+            limits:
+              memory: "1Gi"
+              cpu: "1"
+              hugepages-1Gi: "2Gi"
+    chart:
+      version: "4.7.0"
+    asserts:
+      - isSubset:
+          path: spec.template.spec.containers[?(@.name == 'timescaledb')].resources
+          content:
+            requests:
+              memory: "512Mi"
+              cpu: "500m"
+              hugepages-1Gi: "2Gi"
+            limits:
+              memory: "1Gi"
+              cpu: "1"
+              hugepages-1Gi: "2Gi"
