--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -354,6 +354,9 @@ thorasSlmAgent:
     cpu: 1024m
     memory: 4096Mi
 
+thorasManageThoras:
+  enabled: false
+
 # K8s client max queries per second
 queriesPerSecond: "50"
 
