Apply suggestion from @dspigarelli
Co-authored-by: David Spigarelli <david@thoras.ai>

--- a/charts/thoras/templates/collector/ast.yaml
+++ b/charts/thoras/templates/collector/ast.yaml
@@ -22,6 +22,12 @@ spec:
         lowerbound: 1m
       memory:
         lowerbound: 1Mi
-      name: metrics-collector
+    containers:
+    - cpu:
+      memory:
+      name: timescaledb
+    - cpu:
+      memory:
+      name: thoras-blob-api
     mode: {{ .Values.featureFlags.thorasManageThoras.mode | default "recommendation" }}
 {{- end }}
