--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -80,6 +80,10 @@ thorasOperator:
   prometheus:
     enabled: true
     port: 9101
+  # Set to true to apply global affinity rules to this component
+  useGlobalAffinity: true
+  # Component-specific affinity (merged with global if useGlobalAffinity is true)
+  affinity: {}
 
 metricsCollector:
   persistence:
@@ -139,6 +143,10 @@ metricsCollector:
       cpu: "16m"
       memory: "128Mi"
   additionalPvSecurityContext: {}
+  # Set to true to apply global affinity rules to this component
+  useGlobalAffinity: true
+  # Component-specific affinity (merged with global if useGlobalAffinity is true)
+  affinity: {}
 
 thorasApiServerV2:
   rbac:
@@ -168,6 +176,10 @@ thorasApiServerV2:
   pprof:
     enabled: false
   enableViewCacheQueryLiveJoin: true
+  # Set to true to apply global affinity rules to this component
+  useGlobalAffinity: true
+  # Component-specific affinity (merged with global if useGlobalAffinity is true)
+  affinity: {}
 
 thorasWorker:
   enabled: true
@@ -198,6 +210,10 @@ thorasWorker:
   enableActiveSuggestionWorker: false
   enableUnifiedAstUtilizationMonitor: false
   cloudSyncBaseUrl: "https://console.staging.thoras.ai"
+  # Set to true to apply global affinity rules to this component
+  useGlobalAffinity: true
+  # Component-specific affinity (merged with global if useGlobalAffinity is true)
+  affinity: {}
 
 thorasDashboard:
   enabled: true
@@ -252,6 +268,10 @@ thorasDashboard:
     cost_simulator: false
     rolling_savings: true
     cost_breakdown_v2: true
+  # Set to true to apply global affinity rules to this component
+  useGlobalAffinity: true
+  # Component-specific affinity (merged with global if useGlobalAffinity is true)
+  affinity: {}
 
 thorasMonitor:
   enabled: false
@@ -270,6 +290,10 @@ thorasMonitor:
   podAnnotations: {}
   labels: {}
   config: |
+  # Set to true to apply global affinity rules to this component
+  useGlobalAffinity: true
+  # Component-specific affinity (merged with global if useGlobalAffinity is true)
+  affinity: {}
 
 thorasForecast:
   serviceAccount:
@@ -310,6 +334,10 @@ thorasForecast:
   prometheus:
     enabled: true
     port: 9101
+  # Set to true to apply global affinity rules to this component
+  useGlobalAffinity: true
+  # Component-specific affinity (merged with global if useGlobalAffinity is true)
+  affinity: {}
 
 thorasAgent:
   enabled: false
@@ -353,6 +381,10 @@ thorasSlmAgent:
   requests:
     cpu: 1024m
     memory: 4096Mi
+  # Set to true to apply global affinity rules to this component
+  useGlobalAffinity: true
+  # Component-specific affinity (merged with global if useGlobalAffinity is true)
+  affinity: {}
 
 # K8s client max queries per second
 queriesPerSecond: "50"
@@ -361,6 +393,9 @@ queriesPerSecond: "50"
 nodeSelector: {}
 
 tolerations: []
+
+# Global affinity rules that components can opt into
+affinity: {}
 
 # Global Labels support
 labels: {}
