--- a/charts/thoras/templates/crd/aiscaletarget.yaml
+++ b/charts/thoras/templates/crd/aiscaletarget.yaml
@@ -761,6 +761,41 @@ spec:
                           required:
                           - lowerbound
                           type: object
+                        jvm_options:
+                          properties:
+                            enable_auto_heap_size:
+                              description: Enable automatic JVM heap size adjustment
+                                based on memory requests.
+                              type: boolean
+                            xmx_bounds:
+                              properties:
+                                limit:
+                                  properties:
+                                    ratio:
+                                      anyOf:
+                                      - type: integer
+                                      - type: string
+                                      pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                                      x-kubernetes-int-or-string: true
+                                  required:
+                                  - ratio
+                                  type: object
+                                lowerbound:
+                                  anyOf:
+                                  - type: integer
+                                  - type: string
+                                  pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                                  x-kubernetes-int-or-string: true
+                                upperbound:
+                                  anyOf:
+                                  - type: integer
+                                  - type: string
+                                  pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                                  x-kubernetes-int-or-string: true
+                              required:
+                              - lowerbound
+                              type: object
+                          type: object
                         memory:
                           properties:
                             limit:
@@ -795,6 +830,11 @@ spec:
                       required:
                       - name
                       type: object
+                      x-kubernetes-validations:
+                      - message: EnableAutoHeapSize can only be true if memory.limit
+                          is set
+                        rule: '!has(self.jvm_options) || !self.jvm_options.enable_auto_heap_size
+                          || (has(self.memory) && has(self.memory.limit))'
                     type: array
                   in_place_resizing:
                     description: |-
