--- a/charts/thoras/tests/dashboard_configmap_test.yaml
+++ b/charts/thoras/tests/dashboard_configmap_test.yaml
@@ -4,7 +4,7 @@ templates:
 chart:
   version: "4.36.0"
 set:
-  thorasVersion: TEST
+  thorasVersion: "1.2.3"
   cluster:
     name: phantom-assassin
 tests:
