--- a/charts/thoras/templates/operator/pre-delete-hook.yaml
+++ b/charts/thoras/templates/operator/pre-delete-hook.yaml
@@ -23,3 +23,4 @@ spec:
         image: {{ .Values.imageCredentials.registry }}/services:{{ default .Values.thorasVersion .Values.thorasOperator.imageTag }}
         imagePullPolicy: "{{ .Values.imagePullPolicy }}"
         command: ["/app/operator", "uninstall"]
+        resources: {}
