Expose podEligibilityMinRunningTime config

--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -140,6 +140,8 @@ spec:
             value: {{ .Values.thorasApiServerV2.enableViewCacheQueryLiveJoin | ternary "true" "false" | quote }}
           - name: SERVICE_ENABLE_SKIP_SCALING_ON_INSUFFICIENT_DATA
             value: {{ .Values.featureFlags.enableSkipScalingOnInsufficientData | ternary "true" "false" | quote }}
+          - name: SERVICE_POD_ELIGIBILITY_MIN_RUNNING_TIME
+            value: "{{ .Values.thorasForecast.podEligibilityMinRunningTime }}"
         volumeMounts:
           - name: monitor-config
             mountPath: /app/config.yaml
