--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -297,6 +297,7 @@ thorasForecast:
     name: thoras-forecast-worker
   skipCache: false
   ignoreNewPods: true
+  podEligibilityMinRunningTime: "2m"
   enableDecoupledTraining: true
   trainingJitterMinutes: 0
   # Specify the complete resources block (takes precedence if set)
