Add feature flag for checking database health during service health check

--- a/charts/thoras/templates/api-server-v2/deployment.yaml
+++ b/charts/thoras/templates/api-server-v2/deployment.yaml
@@ -142,6 +142,8 @@ spec:
             value: {{ .Values.featureFlags.enableSkipScalingOnInsufficientData | ternary "true" "false" | quote }}
           - name: SERVICE_POD_ELIGIBILITY_MIN_RUNNING_TIME
             value: "{{ .Values.thorasForecast.podEligibilityMinRunningTime }}"
+          - name: SERVICE_ENABLE_CHECK_DATABASE_HEALTH
+            value: {{ .Values.featureFlags.enableCheckDatabaseHealth | ternary "true" "false" | quote }}
         volumeMounts:
           - name: monitor-config
             mountPath: /app/config.yaml
