--- a/charts/thoras/templates/worker/deployment.yaml
+++ b/charts/thoras/templates/worker/deployment.yaml
@@ -167,6 +167,8 @@ spec:
             {{- end }}
           - name: SERVICE_POD_ELIGIBILITY_MIN_RUNNING_TIME
             value: "{{ .Values.thorasForecast.podEligibilityMinRunningTime }}"
+          - name: SERVICE_ENABLE_NODE_DETAILS_COLLECTOR
+            value: {{ .Values.featureFlags.enableNodeDetailsCollector | ternary "true" "false" | quote}}
         ports:
           - name: http-metrics
             containerPort: {{ .Values.thorasWorker.prometheus.port }}
