--- a/charts/thoras/templates/operator/rbac.yaml
+++ b/charts/thoras/templates/operator/rbac.yaml
@@ -43,19 +43,21 @@ rules:
   verbs:
   - '*'
 - apiGroups:
-  - batch
-  resources:
-  - jobs
-  - cronjobs
-  verbs:
-  - '*'
-- apiGroups:
   - apps
   - argoproj.io
   resources:
   - '*'
   verbs:
   - patch
+- apiGroups:
+  - coordination.k8s.io
+  resources:
+  - leases
+  verbs:
+  - 'get'
+  - 'create'
+  - 'update'
+  - 'watch'
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 {{- if .rbacNamespace }}
