--- a/charts/thoras/templates/operator/webhooks.yaml
+++ b/charts/thoras/templates/operator/webhooks.yaml
@@ -30,7 +30,9 @@ metadata:
     {{- include "thoras.labels" . | nindent 4 }}
 webhooks:
 - name: "pods.thoras.ai"
-  {{- include "thoras.webhooks.excludedNamespaces" . | nindent 2 }}
+  namespaceSelector:
+    matchExpressions:
+      {{- include "thoras.webhooks.excludedNamespaces" . | nindent 6 }}
   rules:
   - apiGroups:   [""]
     apiVersions: ["v1"]
@@ -48,7 +50,9 @@ webhooks:
   admissionReviewVersions:
     - v1
 - name: "scale.thoras.ai"
-  {{- include "thoras.webhooks.excludedNamespaces" . | nindent 2 }}
+  namespaceSelector:
+    matchExpressions:
+      {{- include "thoras.webhooks.excludedNamespaces" . | nindent 6 }}
   rules:
   - apiGroups:   ["*"]
     apiVersions: ["*"]
@@ -74,7 +78,9 @@ metadata:
     {{- include "thoras.labels" . | nindent 4 }}
 webhooks:
   - name: "ast-validation.thoras.ai"
-    {{- include "thoras.webhooks.excludedNamespaces" . | nindent 4 }}
+    namespaceSelector:
+      matchExpressions:
+        {{- include "thoras.webhooks.excludedNamespaces" . | nindent 8 }}
     rules:
     - apiGroups:   ["thoras.ai"]
       apiVersions: ["v1"]
@@ -93,7 +99,9 @@ webhooks:
     admissionReviewVersions:
       - v1
   - name: "scale-validation.thoras.ai"
-    {{- include "thoras.webhooks.excludedNamespaces" . | nindent 4 }}
+    namespaceSelector:
+      matchExpressions:
+        {{- include "thoras.webhooks.excludedNamespaces" . | nindent 8 }}
     rules:
     - apiGroups:   ["*"]
       apiVersions: ["*"]
