--- a/charts/thoras/templates/operator/deployment.yaml
+++ b/charts/thoras/templates/operator/deployment.yaml
@@ -34,7 +34,13 @@ spec:
       volumes:
         - name: tls
           secret:
+            defaultMode: 420
             secretName: thoras-webhooks-cert
+            items:
+              - key: cert
+                path: tls.crt
+              - key: key
+                path: tls.key
       initContainers:
       - image: {{ .Values.imageCredentials.registry }}/services:{{ default .Values.thorasVersion .Values.thorasOperator.imageTag }}
         name: wait-for-api-service
