--- a/charts/thoras/values.yaml
+++ b/charts/thoras/values.yaml
@@ -86,6 +86,12 @@ thorasOperator:
   useGlobalAffinity: true
   # Component-specific affinity (merged with global if useGlobalAffinity is true)
   affinity: {}
+  # Webhook certificate generation configuration
+  webhookCertGen:
+    image:
+      registry: registry.k8s.io/ingress-nginx
+      repository: kube-webhook-certgen
+      tag: v1.4.4
 
 metricsCollector:
   persistence:
