update cert secret

--- a/charts/thoras/templates/operator/deployment.yaml
+++ b/charts/thoras/templates/operator/deployment.yaml
@@ -35,7 +35,7 @@ spec:
         - name: tls
           secret:
             defaultMode: 420
-            secretName: thoras-webhooks-cert
+            secretName: thoras-tls-certs
             items:
               - key: cert
                 path: tls.crt
