--- a/charts/thoras/templates/operator/webhooks-certgen-clusterrole.yaml
+++ b/charts/thoras/templates/operator/webhooks-certgen-clusterrole.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: thoras-webhooks-certgen
+  name: thoras-tls-certsgen
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
