--- a/charts/thoras/templates/operator/webhooks-certgen-clusterrolebinding.yaml
+++ b/charts/thoras/templates/operator/webhooks-certgen-clusterrolebinding.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: thoras-webhooks-certgen
+  name: thoras-tls-certsgen
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
@@ -13,8 +13,8 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: thoras-webhooks-certgen
+  name: thoras-tls-certsgen
 subjects:
   - kind: ServiceAccount
-    name: thoras-webhooks-certgen
+    name: thoras-tls-certsgen
     namespace: {{ .Release.Namespace }}
