--- a/charts/thoras/templates/operator/webhooks-certgen-role.yaml
+++ b/charts/thoras/templates/operator/webhooks-certgen-role.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: thoras-webhooks-certgen
+  name: thoras-tls-certsgen
   namespace: {{ .Release.Namespace }}
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
