--- a/charts/thoras/templates/operator/webhooks-certgen-rolebinding.yaml
+++ b/charts/thoras/templates/operator/webhooks-certgen-rolebinding.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: thoras-webhooks-certgen
+  name: thoras-tls-certsgen
   namespace: {{ .Release.Namespace }}
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
@@ -14,8 +14,8 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: thoras-webhooks-certgen
+  name: thoras-tls-certsgen
 subjects:
   - kind: ServiceAccount
-    name: thoras-webhooks-certgen
+    name: thoras-tls-certsgen
     namespace: {{ .Release.Namespace }}
