--- a/charts/thoras/templates/operator/webhooks-certgen-serviceaccount.yaml
+++ b/charts/thoras/templates/operator/webhooks-certgen-serviceaccount.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: thoras-webhooks-certgen
+  name: thoras-tls-certsgen
   namespace: {{ .Release.Namespace }}
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade,post-install,post-upgrade
