Moved kube-webhook-certgen to thoras reg

--- a/charts/thoras/templates/operator/webhooks-certgen-create.yaml
+++ b/charts/thoras/templates/operator/webhooks-certgen-create.yaml
@@ -22,13 +22,16 @@ spec:
     spec:
       restartPolicy: OnFailure
       serviceAccountName: thoras-tls-certsgen
-      {{- if .Values.imageCredentials.password }}
+      {{- if .Values.imageCredentials.secretRef }}
       imagePullSecrets:
-        - name: thoras-registry-secret
+        - name: {{ .Values.imageCredentials.secretRef }}
+      {{- else if .Values.imageCredentials.password }}
+      imagePullSecrets:
+        - name: thoras-secret-registry-certgen
       {{- end }}
       containers:
         - name: create
-          image: {{ .Values.thorasOperator.webhookCertGen.image.registry }}/{{ .Values.thorasOperator.webhookCertGen.image.repository }}:{{ .Values.thorasOperator.webhookCertGen.image.tag }}
+          image: {{ .Values.imageCredentials.registry }}/kube-webhook-certgen:{{ .Values.thorasOperator.webhookCertGen.imageTag }}
           imagePullPolicy: {{ .Values.imagePullPolicy }}
           args:
             - create
