--- a/charts/thoras/templates/operator/webhooks-certgen-registry-secret.yaml
+++ b/charts/thoras/templates/operator/webhooks-certgen-registry-secret.yaml
@@ -13,7 +13,7 @@ metadata:
   annotations:
     "helm.sh/hook": pre-install,pre-upgrade
     "helm.sh/hook-weight": "-5"
-    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
+    "helm.sh/hook-delete-policy": before-hook-creation
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: {{ template "imagePullSecret" . }}
